<resources>
    <string name="app_name">projectCEM</string>
    <string name="button_generate_graph">Generate Graph</string>
    <string name="button_calculate_params">Calculate Params</string>
    <string name="label_circuito_aberto">Circuito Aberto</string>
    <string name="label_ca_tensao">Tensão:</string>
    <string name="label_ca_corrente">Corrente:</string>
    <string name="label_ca_potencia">Potência:</string>
    <string name="label_curto_circuito">Curto-Circuito</string>
    <string name="label_cc_tensao">Tensão:</string>
    <string name="label_cc_corrente">Corrente:</string>
    <string name="label_cc_potencia">Potência</string>
    <string name="label_form_description">Medições dos ensaios de circuito aberto e curto-circuito.</string>
    <string name="button_calculate_params_now">Calculate</string>
    <string name="label_rc">"RC: "</string>
    <string name="label_req">"Req: "</string>
    <string name="label_xeq">"Xeq: "</string>
    <string name="label_xm">"Xm: "</string>
    <string name="label_results">Results</string>
    <string name="label_vmax">"Vmax: "</string>
    <string name="label_frequency">f:</string>
    <string name="label_potencia_aparente">S:</string>
    <string name="label_num_espiras_p">Np:</string>
    <string name="label_num_espiras_s">Ns:</string>
    <string name="label_comprimento">l:</string>
    <string name="label_area">A:</string>
    <string name="label_graph_params_text">Input the parameters to generate the graph</string>
    <string name="button_graph_params_generate">Run</string>
    <string name="label_ca_machine">CA Machine</string>
    <string name="title_activity_camachine_form">CAMachineFormActivity</string>
    <string name="label_ca_machine_graph">Go!</string>
    <string name="title_activity_camachine_graph">CAMachineGraphActivity</string>
    <string name="label_r1">r1:</string>
    <string name="label_x1">x1:</string>
    <string name="label_x2">x2:</string>
    <string name="label_r2">r2:</string>
    <string name="labelxm">xm:</string>
    <string name="label_v_phase">v_phase:</string>
    <string name="label_n_sync">n_sync:</string>
    <string name="label_w_sync">w_sync:</string>
</resources>
